--- a/MoneySplitter.Sqlite/MoneySplitter.Sqlite.csproj
+++ b/MoneySplitter.Sqlite/MoneySplitter.Sqlite.csproj
@@ -1,11 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.Sqlite" Version="2.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MoneySplitter.Infrastructure\MoneySplitter.Infrastructure.csproj" />
+    <ProjectReference Include="..\MoneySplitter.Models\MoneySplitter.Models.csproj" />
   </ItemGroup>
 
 </Project>
