--- a/MoneySplitter.Services/MoneySplitter.Services.csproj
+++ b/MoneySplitter.Services/MoneySplitter.Services.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <PackageTargetFallback>$(PackageTargetFallback);portable-win+net45+wp8+win81+wpa8</PackageTargetFallback>
-    <TargetFramework>netstandard1.4</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ProjectReference Include="..\MoneySplitter.Infrastructure\MoneySplitter.Infrastructure.csproj" />
     <ProjectReference Include="..\MoneySplitter.Models\MoneySplitter.Models.csproj" />
+    <ProjectReference Include="..\MoneySplitter.Sqlite\MoneySplitter.Sqlite.csproj" />
   </ItemGroup>
 
   <ItemGroup>
